Fixed errors in jwt and config file in security